refactor: Rename project and update metadata
Renames the project to "Local AI Brain - Casper_AutoPilot" and updates the title, package.json name, and metadata to reflect this. Also introduces a new `feedback` property to `ChatMessage` for potential future use and clarifies that the "geminiService" file actually handles communication with a local Python server. Updates the persona description for the AI assistant. Adds URL hash support for sharing chat sessions.

Adds "Generera Titel & Taggar" and "Föreslå Short-klipp" tools to the sidebar, along with improved prompt text for existing tools. Renames "AI-Verktyg" to "Lokala Agenter".

Introduces `onRegenerate` and `onFeedback` props for the `ChatInterface` to handle message regeneration and feedback, along with an `isReadOnly` prop.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youtube-ai-assistant",
+  "name": "local-ai-brain---casper_autopilot",
   "private": true,
   "version": "0.0.0",
   "type": "module",
