feat: Implement autonomous video improvement
Introduces functionality for the AI to autonomously analyze and improve video segments. This includes:

- Updating `package.json` and `metadata.json` to reflect the new version and focus.
- Adding `improveVideo` function to `geminiService.ts`.
- Integrating `improveVideo` handler in `App.tsx`.
- Exposing the new `onImproveVideo` prop to `ChatInterface.tsx` and `Message.tsx`.
- Adding relevant prompts to `Sidebar.tsx`.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "local-ai-brain---casper_autopilot",
+  "name": "casper_autopilot-v3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
