--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "casper_autopilot-v3",
+  "name": "casper_autopilot-(local-edition)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,7 +11,6 @@
   "dependencies": {
     "marked": "^16.4.1",
     "react": "^19.2.0",
-    "@google/genai": "^1.27.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
