--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "casper_autopilot-(local-edition)",
+  "name": "gpt-5-core-interface",
   "private": true,
   "version": "0.0.0",
   "type": "module",
